index images en styling

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         <!--MAIN-->
         <main class="container">
             <div class="row row-koop-nu">
-                <div class="col-6 d-flex align-items-center col-koop-nu-foto">
-                    <p>Afbeelding</p>
+                <div class="col-6 d-flex align-items-center col-koop-nu-foto mb-5 p-5">
+                    <img class="img-fluid" src="./Images/BandGeelPingGroen.png" alt="Gele Band">
                 </div>
                 <div class="col-6 d-flex justify-content-center flex-column col-koop-nu-info pl-5 pb-5">
                     <div>
@@ -71,13 +71,13 @@
                     </div>
                 </div>
             </div>
-            <div class="row flex-column row-specs">
-                <div class="row-specs-title">
+            <div class="row flex-column row-specs align-items-center">
+                <div class="row-specs-title align-self-start">
                     <h1 class="display-3">SPECIFICATIES</h1>
                 </div>
-                <div class="d-flex align-items-center justify-content-center row-specs-content flex-column">
-                    <div>
-                        <p>Test</p>
+                <div class="col-6 d-flex align-items-center justify-content-center row-specs-content flex-column p-5 m-5">
+                    <div class="d-flex">
+                        <img class="img-fluid" src="./Images/BandRoodPingGroen.png" alt="Rode Band">
                     </div>
                     <div>  
                         <button class="btn btn-info mt-5">Meer info</button>
@@ -119,15 +119,28 @@
                 <div class="row d-flex justify-content-center row-overping-titel pb-5">
                     <h1 class="display-3">Over PINGWING</h1>
                 </div>
-                <div class="row row-overping-tekstblokken py-5">
+                <div class="row row-overping-tekstblokken py-5 mt-5">
                     <div class="col-4 team-focus-missie">
-                        <p>Team</p>
+                        <h4>Team</h4>
+                        <p>Een gedisciplineerd team van 5 <br>
+                        studenten dat streeft naar een veilig <br>
+                    gevoel voor kinderen en een <br>
+                geruststellend gevoel voor ouders.</p>
                     </div>
                     <div class="col-4 team-focus-missie px-4">
-                        <p>Focus</p>
+                        <h4>Focus</h4>
+                        <p>Wij bij 'PingWing' focussen op het <br>
+                        gebruiksgemak van onze armband, <br>
+                    applicatie & website door overzichtelijke <br>
+                interfaces te voorzien. De armband geeft <br>
+            duidelijke signalen naar het kind door <br>
+        middel van geluid- en lichtsignalen.</p>
                     </div>
                     <div class="col-4 team-focus-missie"> 
-                        <p>Missie</p>
+                        <h4>Onze missie</h4>
+                        <p>Wij gaan ervoor om ouders een veilig <br>
+                        gevoel te geven en kinderen gerust te <br>
+                    stellen in hun omgeving.</p>
                     </div>
                 </div>
                 <div class="row row-overping-info pl-3 pt-5">
