LogIn system tryout

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                         <h1 class="header-text display-3">RELAX MORE <br> FEEL SAFE</h1>
                     </div>
                     <div>
-                        <p>Ga altijd met een gerust hart op<br>
-                        pad en weet dat je kinderen veilig zijn,</p>
+                        <p>Ga altijd met een gerust hart op pad<br>
+                           en weet dat je kinderen veilig zijn.</p>
                     </div>
                     <div>
                         <button class="btn btn-info mt-4">Koop nu</button>
