--- a/logIn.html
+++ b/logIn.html
@@ -67,13 +67,13 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label for="exampleInputPassword1">Email*</label>
-                                <input type="text" class="form-control" id="exampleInputPassword1">
+                                <input type="text" class="form-control" id="mailInput">
                             </div>
                         </div>
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label for="exampleInputPassword1">Wachtwoord*</label>
-                                <input type="text" class="form-control" id="exampleInputPassword1">
+                                <input type="text" class="form-control" id="wachtwoordInput">
                             </div>
                         </div>
                         <div class="col-md-12">
@@ -83,7 +83,7 @@
                             </form>
                         </div>
                         <div class="col-md-12 d-flex pt-3 justify-content-md-end justify-content-center">
-                            <button class="btn px-4">Verzenden</button>
+                            <button class="btn px-4" id="logIn">Verzenden</button>
                         </div>
                     </div>
                 </div>
@@ -95,37 +95,37 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="exampleInputPassword1">Naam*</label>
-                                <input type="text" class="form-control" id="exampleInputPassword1">
+                                <input type="text" class="form-control" id="naamUser">
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="exampleInputPassword1">Telefoon</label>
-                                <input type="text" class="form-control" id="exampleInputPassword1">
+                                <input type="text" class="form-control" id="telefoonUser">
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="exampleInputPassword1">Email*</label>
-                                <input type="text" class="form-control" id="exampleInputPassword1">
+                                <input type="text" class="form-control" id="mailUser">
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="exampleInputPassword1">Wachtwoord*</label>
-                                <input type="text" class="form-control" id="exampleInputPassword1">
+                                <input type="text" class="form-control" id="wachtwoordUser">
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="exampleInputPassword1">Straat+nr*</label>
-                                <input type="text" class="form-control" id="exampleInputPassword1">
+                                <input type="text" class="form-control" id="straatUser">
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="exampleInputPassword1">Stad+postcode*</label>
-                                <input type="text" class="form-control" id="exampleInputPassword1">
+                                <input type="text" class="form-control" id="postcodeUser">
                             </div>
                         </div>
                         <div class="col-md-12">
@@ -135,7 +135,7 @@
                             </form>
                         </div>
                         <div class="col-md-12 d-flex pt-3 justify-content-md-end justify-content-center">
-                            <button class="btn px-4">Verzenden</button>
+                            <button class="btn px-4" id="registreer">Verzenden</button>
                         </div>
                     </div>
                 </div>
