navbar html overal aangepast

--- a/contact.html
+++ b/contact.html
@@ -37,10 +37,14 @@
                         <a class="">|</a>
                     </li>
                     <li class="nav-item align-self-center">
-                        <a class="nav-link px-md-4" href="./contact.html"><ion-icon name="bag-outline"></ion-icon></a>
+                        <a class="nav-link px-md-4" href="./winkelmandje.html">
+                            <ion-icon class="" name="bag-outline"></ion-icon>
+                        </a>
                     </li>
                     <li class="nav-item align-self-center">
-                        <a class="nav-link pr-md-4" href="#"><ion-icon name="person-outline"></ion-icon></a>
+                        <a class="nav-link pr-md-4" href="./logIn.html">
+                            <ion-icon class="" name="person-outline"></ion-icon>
+                        </a>
                     </li>
                 </ul>
             </div>
