--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         <!--NAVIGATIEBALK-->
         <nav class="navbar navbar-expand-md navbar-light bg-light">
             <a class="navbar-brand brand" href="./index.html">Pingwing</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -31,7 +30,7 @@
                         <a class="nav-link px-md-4" href="./bestel.html">Bestel</a>
                     </li>
                     <li class="nav-item align-self-center">
-                        <a class="nav-link px-md-4 active" href="./overOns.html">Over ons<span class="sr-only"></span></a>
+                        <a class="nav-link px-md-4" href="./overOns.html">Over ons<span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item align-self-center">
                         <a class="nav-link px-md-4" href="./contact.html">Contact</a>
@@ -40,12 +39,12 @@
                         <a class="">|</a>
                     </li>
                     <li class="nav-item align-self-center">
-                        <a class="nav-link px-md-4" href="./contact.html">
+                        <a class="nav-link px-md-4" href="./winkelmandje.html">
                             <ion-icon class="" name="bag-outline"></ion-icon>
                         </a>
                     </li>
                     <li class="nav-item align-self-center">
-                        <a class="nav-link pr-md-4" href="#">
+                        <a class="nav-link pr-md-4" href="./logIn.html">
                             <ion-icon class="" name="person-outline"></ion-icon>
                         </a>
                     </li>
