--- a/logIn.html
+++ b/logIn.html
@@ -21,8 +21,7 @@
     <div class="container-fluid fullpage m-0 p-0">
         <nav class="navbar navbar-expand-md navbar-light bg-light">
             <a class="navbar-brand brand" href="./index.html">Pingwing</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -34,8 +33,7 @@
                         <a class="nav-link px-md-4" href="./bestel.html">Bestel</a>
                     </li>
                     <li class="nav-item align-self-center">
-                        <a class="nav-link px-md-4 active" href="./overOns.html">Over ons<span
-                                class="sr-only"></span></a>
+                        <a class="nav-link px-md-4 active" href="./overOns.html">Over ons<span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item align-self-center">
                         <a class="nav-link px-md-4" href="./contact.html">Contact</a>
@@ -44,13 +42,13 @@
                         <a class="">|</a>
                     </li>
                     <li class="nav-item align-self-center">
-                        <a class="nav-link px-md-4" href="./contact.html">
-                            <ion-icon name="bag-outline"></ion-icon>
+                        <a class="nav-link px-md-4" href="./winkelmandje.html">
+                            <ion-icon class="" name="bag-outline"></ion-icon>
                         </a>
                     </li>
                     <li class="nav-item align-self-center">
-                        <a class="nav-link pr-md-4" href="#">
-                            <ion-icon name="person-outline"></ion-icon>
+                        <a class="nav-link pr-md-4 active" href="./logIn.html">
+                            <ion-icon class="" name="person-outline"></ion-icon>
                         </a>
                     </li>
                 </ul>
