--- a/winkelmandje.html
+++ b/winkelmandje.html
@@ -29,7 +29,7 @@
                         <a class="nav-link px-md-4" href="./bestel.html">Bestel</a>
                     </li>
                     <li class="nav-item align-self-center">
-                        <a class="nav-link px-md-4 active" href="./overOns.html">Over ons<span class="sr-only"></span></a>
+                        <a class="nav-link px-md-4" href="./overOns.html">Over ons<span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item align-self-center">
                         <a class="nav-link px-md-4" href="./contact.html">Contact</a>
@@ -38,10 +38,14 @@
                         <a class="">|</a>
                     </li>
                     <li class="nav-item align-self-center">
-                        <a class="nav-link px-md-4" href="./contact.html"><ion-icon name="bag-outline"></ion-icon></a>
+                        <a class="nav-link px-md-4 active" href="./winkelmandje.html">
+                            <ion-icon class="" name="bag-outline"></ion-icon>
+                        </a>
                     </li>
                     <li class="nav-item align-self-center">
-                        <a class="nav-link pr-md-4" href="#"><ion-icon name="person-outline"></ion-icon></a>
+                        <a class="nav-link pr-md-4" href="./logIn.html">
+                            <ion-icon class="" name="person-outline"></ion-icon>
+                        </a>
                     </li>
                 </ul>
             </div>
