general style adjust, secondary font toegevoegd

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./Css/index.css">
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
+    <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
     <title>Index</title>
 </head>
 <body>
@@ -75,7 +76,7 @@
                     <h1 class="display-3">SPECIFICATIES</h1>
                 </div>
                 <div class="col-6 d-flex align-items-center justify-content-center row-specs-content flex-column p-5 m-5">
-                    <div class="d-flex">
+                    <div class="d-flex justify-content-center">
                         <img class="img-fluid" src="./Images/BandRoodPingGroen.png" alt="Rode Band">
                     </div>
                     <div>  
@@ -85,7 +86,8 @@
             </div>
             <div class="row row-myping">
                 <div class="col-6 d-flex align-items-end row-myping-mockup pb-5">
-                    <img class="pb-5 mb-5" src="./Images/MockUpGsm.PNG">
+                    <img class="img-fluid mockup1 pb-5 mb-5" src="./Images/mockup_1.png">
+                    <img class="img-fluid mockup2 pb-5 mb-5" src="./Images/mockup_2.png">
                 </div>
                 <div class="col-5 offset-1 row-myping-info pb-5">
                     <div class="row-myping-info-box pb-5 mb-5">
@@ -121,25 +123,20 @@
                 <div class="row row-overping-tekstblokken py-5 mt-5">
                     <div class="col-4 team-focus-missie">
                         <h4>Team</h4>
-                        <p>Een gedisciplineerd team van 5 <br>
-                        studenten dat streeft naar een veilig <br>
-                    gevoel voor kinderen en een <br>
-                geruststellend gevoel voor ouders.</p>
+                        <p>Een gedisciplineerd team van 5 studenten dat streeft naar een veilig gevoel voor kinderen en een geruststellend gevoel voor ouders.</p>
                     </div>
                     <div class="col-4 team-focus-missie px-4">
                         <h4>Focus</h4>
-                        <p>Wij bij 'PingWing' focussen op het <br>
-                        gebruiksgemak van onze armband, <br>
-                    applicatie & website door overzichtelijke <br>
-                interfaces te voorzien. De armband geeft <br>
-            duidelijke signalen naar het kind door <br>
-        middel van geluid- en lichtsignalen.</p>
+                        <p>Wij bij 'PingWing' focussen op het 
+                           gebruiksgemak van onze armband, 
+                           applicatie & website door overzichtelijke 
+                           interfaces te voorzien. De armband geeft 
+                           duidelijke signalen naar het kind door 
+                           middel van geluid- en lichtsignalen.</p>
                     </div>
                     <div class="col-4 team-focus-missie"> 
                         <h4>Onze missie</h4>
-                        <p>Wij gaan ervoor om ouders een veilig <br>
-                        gevoel te geven en kinderen gerust te <br>
-                    stellen in hun omgeving.</p>
+                        <p>Wij gaan ervoor om ouders een veilig gevoel te geven en kinderen gerust te stellen in hun omgeving.</p>
                     </div>
                 </div>
                 <div class="row row-overping-info pl-3 pt-5">
