--- a/logIn.html
+++ b/logIn.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./Css/login.css">
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
+    <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
     <title>Login</title>
 </head>
 
