--- a/overOns.html
+++ b/overOns.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./Css/overOns.css">
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
+    <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
     <title>Over Ons</title>
 </head>
 <body>
