--- a/winkelmandje.html
+++ b/winkelmandje.html
@@ -11,6 +11,7 @@
     <script defer src="./Js/winkelmandje.js"></script>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
+    <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
     <title>Winkelmandje</title>
 </head>
 <body>
