--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                            en weet dat je kinderen veilig zijn.</p>
                     </div>
                     <div>
-                        <button class="btn btn-info mt-4">Koop nu</button>
+                        <button class="btn btn-info custom-button mt-4">Koop nu</button>
                     </div>
                 </div>
             </div>
@@ -80,7 +80,7 @@
                         <img class="img-fluid" src="./Images/BandRoodPingGroen.png" alt="Rode Band">
                     </div>
                     <div>  
-                        <button class="btn btn-info mt-5">Meer info</button>
+                        <button class="btn btn-info custom-button mt-5">Meer info</button>
                     </div>
                 </div>
             </div>
@@ -107,11 +107,11 @@
                                 <li>Bel functie</li>
                             </ul></div>
                         <div>
-                            <button class="btn btn-info">Meer info</button>
+                            <button class="btn btn-info custom-button">Meer info</button>
                         </div>
                         <div class="pt-5">
-                            <button class="btn btn-info">App Store</button>
-                            <button class="btn btn-info">Google Play</button>
+                            <button class="btn btn-info custom-button">App Store</button>
+                            <button class="btn btn-info custom-button">Google Play</button>
                         </div>
                     </div>
                 </div>
@@ -140,7 +140,7 @@
                     </div>
                 </div>
                 <div class="row row-overping-info pl-3 pt-5">
-                    <button class="btn btn-info">Meer info</button>
+                    <button class="btn btn-info custom-button">Meer info</button>
                 </div>
             </div>
         </main>
