--- a/logIn.html
+++ b/logIn.html
@@ -141,30 +141,30 @@
             </div>
         </main>
         <!--FOOTER-->
-        <footer class="row p-md-5 pt-4">
-            <div class="col-md-4 d-flex justify-content-center align-items-center column1-footer">
+        <footer class="row">
+            <div class="col-md-4 d-flex justify-content-center align-items-center column1-footer py-md-5">
                 <div class="column1-footer-links d-flex flex-column">
-                    <a class="pb-2" href="./index.html">Home</a>
-                    <a class="pb-2" href="./product.html">Product</a>
-                    <a class="pb-2" href="./overOns.html">Over ons</a>
+                    <a class="pb-4" href="./index.html">Home</a>
+                    <a class="pb-4" href="./product.html">Product</a>
+                    <a class="pb-4" href="./overOns.html">Over ons</a>
                     <a href="./contact.html">Contact</a>
                 </div>
             </div>
-            <div class="col-md-4 d-flex flex-column align-items-center justify-content-center column2-footer">
+            <div class="col-md-4 d-flex flex-column align-items-center justify-content-between column2-footer py-3">
                 <div class="pb-2">
                     <h2>PINGWING</h2>
                 </div>
                 <div class="pb-2">
-                    <a href="">
+                    <a class="pr-2" href="">
                         <ion-icon name="logo-youtube"></ion-icon>
                     </a>
-                    <a href="">
+                    <a class="px-1" href="">
                         <ion-icon name="logo-linkedin"></ion-icon>
                     </a>
-                    <a href="">
+                    <a class="px-1" href="">
                         <ion-icon name="logo-facebook"></ion-icon>
                     </a>
-                    <a href="">
+                    <a class="pl-2" href="">
                         <ion-icon name="logo-instagram"></ion-icon>
                     </a>
                 </div>
@@ -172,13 +172,13 @@
                     <p>2021 &copy; PINGWING</p>
                 </div>
             </div>
-            <div class="col-md-4 d-flex justify-content-center align-items-center column3-footer py-4 py-md-0">
+            <div class="col-md-4 d-flex justify-content-center align-items-center column3-footer py-md-5">
                 <div class="column3-footer-info">
-                    <div class="info">
+                    <div class="info pb-4">
                         <ion-icon name="call-outline"></ion-icon>
                         <p>+32 123 45 789</p>
                     </div>
-                    <div class="info pb-3">
+                    <div class="info pb-4">
                         <ion-icon name="mail-outline"></ion-icon>
                         <a href="mailto:test@test.com">Info@PingWing.be</a>
                     </div>
